# inter-operator-scheduler

./: .gitignore  CMakeLists.txt  README.md  config.cmake
cmake/: FindCUDA.cmake
examples/: inception_v3.py  sample.py
experiments/: README.md
experiments/latency/: main.py  run_all.sh  run_expr_autotvm.sh  run_expr_batchsize.sh  run_expr_frameworks.sh  run_expr_prune.sh  run_expr_schedules.sh
experiments/prune/: main.py  run_expr_prune.sh
experiments/specialization/: main.py  run_expr_spec_batchsize.sh  run_expr_spec_device.sh
experiments/specialization/schedules/: 128.json  16.json  32.json  64.json  k80.json  v100.json
experiments/tests/graph_dp_summary/: graph_dp_summary.py
experiments/tests/large_graph/: main.py
experiments/tests/resnet/: main.py
experiments/tests/taso_inceptionv3_bs/: main.py
experiments/tests/tvm_cudnn/: main.py
experiments/utilization/: draw_curve.py  main.py  run_expr_utilization.sh
include/ios/: ops.h  profile.h
include/utils/: utils.h
python/: README.md  ir.py  optimizer.py  setup.py  taso_utils.py  tf_utils.py  torch_utils.py  tvm_utils.py  visualizer.py
python/contrib/: ctypes_utils.py  ios_backend.py  trt_backend.py
python/cost_model/: __init__.py  cost_model.py  ios_cost_model.py  random_cost_model.py
python/ios/: __init__.py  cost_model.py  ir.py  optimizer.py  taso_utils.py  tf_utils.py  torch_utils.py  tvm_utils.py  utils.py  visualizer.py
python/ios/contrib/: ctypes_utils.py  ios_runtime.py  trt_runtime.py
python/ios/models/: __init__.py  alexnet.py  common.py  nasnet.py  randwire.py  resnet.py
python/models/: common.py  inception_v3.py  randwire.py  squeezenet.py  vgg.py
python/models/randwire_graphs/: ws.py
src/: README.md  ios_backend.cu  main.cu  ops.cu  ops.h  parallel_expr.cc  profile.cu  profile.h  trt_backend.cc  utils.cc  utils.h
src/ios/: ios_runtime.cu  ops.cu  profile.cu
src/trt/: trt_runtime.cc
src/utils/: jsoncpp.cpp  utils.cc
